# tracker_workspace

./: .gitignore  .gitmodules  README.md
launch/: tracker_launch.py
src/config/config/: rviz_config.rviz
src/messages/: CMakeLists.txt  package.xml
src/messages/msg/: Pose.msg  Velocity.msg
src/messages/radar_msgs/: CMakeLists.txt  package.xml
src/messages/radar_msgs/msg/: Detection.msg  RadarScan.msg  SensorOrigin.msg
src/messages/radar_processor_msgs/: CMakeLists.txt  package.xml
src/messages/radar_processor_msgs/msg/: MovingObject.msg  Pose.msg  ScanObjects.msg  Size.msg  Velocity.msg
src/messages/tracker_msgs/: CMakeLists.txt  package.xml
src/messages/tracker_msgs/msg/: Covariance.msg  Object.msg  Shape.msg  TrackerScan.msg
src/radar_preprocessor/: CMakeLists.txt  package.xml
src/radar_preprocessor/include/: radar_preprocessor_wrapper.hpp
src/radar_preprocessor/src/: radar_preprocessor_node.cpp  radar_preprocessor_wrapper.cpp
src/sensors_static_tf_broadcaster/: CMakeLists.txt  package.xml
src/sensors_static_tf_broadcaster/config/: sensors_config.yaml
src/sensors_static_tf_broadcaster/src/: sensors_static_broadcaster_node.cpp
src/tracker/: CMakeLists.txt  package.xml
src/tracker/include/: tracker_wrapper.hpp
src/tracker/src/: tracker_wrapper.cpp  tracker_wrapper_node.cpp
src/visualization/: CMakeLists.txt  package.xml
src/visualization/include/: radar_preprocessor_visualizer.hpp  radar_visualizer.hpp  tracker_visualizer.hpp
src/visualization/src/: radar_preprocessor_visualization_node.cpp  radar_preprocessor_visualizer.cpp  radar_visualization_node.cpp  radar_visualizer.cpp  tracker_visualization.cpp  tracker_visualizer.cpp  tracker_visualizer_node.cpp
